--- a/exo-bootstrap.html
+++ b/exo-bootstrap.html
@@ -10,42 +10,39 @@
 
     <title>Hello, world!</title>
     <style>
-      .container{
-        max-width:600px;
+      h1{
+        color:red;
       }
-      header,.btn-dark{
-        background-color:black;
+      div{
+        border:1px solid black;
       }
     </style>
   </head>
   <body>
-    <header class="text-white ">
-      <div class="bg-dark container text-center">
+    <h1 class="text-center alert alert-danger">Hello, world!</h1>
+    <h1 class="text-center alert alert-info">Hello, world!</h1>
+    <h1 class="btn btn-danger m-1 mr-5 p-5 pt-5">Click!</h1>
+    <h1 class="btn btn-info">Click!</h1>
 
-        <img class="mt-2" src="https://fakeimg.pl/250x100/"><br>
-        <strong>Ludovic Dedieu</strong><br>
+    <div class="container">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-        <em>Developpeur Web/Mobile Actuellement en formation</em><br>
-        <em>En recherche de stage du 30 juin au 14 août 2020</em><br>
-
-      <div class="row border-top text-white">
-        <div class="col btn border-right">
-          <span class="fas fa-phone-alt"></span><br>
-          Appeler
-        </div>
-        <div class="col btn border-left">
-          <span class="fas fa-paper-plane"></span><br>
-          Email
-        </div>
-
+    </div>
+    <div class="row">
+      <!-- md egale médium;sm:small;lg:large;xs:extrasmall-->
+      <div class="col-md-4">
+        Tata
+      </div>
+      <div class="col-md-4">
+        Titi
+      </div>
+      <div class="col-md-4">
+        Toto
       </div>
     </div>
 
-    </header>
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js" integrity="sha256-MAgcygDRahs+F/Nk5Vz387whB4kSK9NXlDN3w58LLq0=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
