--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </style>
   </head>
   <body>
-    <header class="text-white ">
-      <div class="bg-dark container text-center">
+    <header class="text-white pt-5 ">
+      <div class="container text-center">
 
         <img class="mt-2" src="https://fakeimg.pl/250x100/"><br>
         <strong>Ludovic Dedieu</strong><br>
@@ -30,12 +30,19 @@
 
       <div class="row border-top text-white">
         <div class="col btn border-right">
-          <span class="fas fa-phone-alt"></span><br>
-          Appeler
+          <a  class="btn btn-dark w-100 text-white" href="tel:0770189673">
+            <span class="fas fa-phone-alt"></span><br>
+            <span class="text-em text-uppercase">Appeler</span><br>
+
+          </a>
+
         </div>
         <div class="col btn border-left">
+          <a class="btn btn-dark w-100 text-white" href="mailto:ludovic.dedieu13@gmail.com">
+
           <span class="fas fa-paper-plane"></span><br>
-          Email
+          <span class="text-em text-uppercase">Email</span><br>
+        </a>
         </div>
 
       </div>
