test du push V2

--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Vcard</title>
     <style>
       .container{
         max-width:600px;
       }
       header,.btn-dark{
         background-color:black;
+      }
+      div{
+        border:1px dashed red
+
       }
     </style>
   </head>
@@ -28,27 +32,129 @@
         <em>Developpeur Web/Mobile Actuellement en formation</em><br>
         <em>En recherche de stage du 30 juin au 14 août 2020</em><br>
 
-      <div class="row border-top text-white">
-        <div class="col btn border-right">
-          <a  class="btn btn-dark w-100 text-white" href="tel:0770189673">
-            <span class="fas fa-phone-alt"></span><br>
-            <span class="text-em text-uppercase">Appeler</span><br>
+        <div class="row border-top text-white">
+          <div class="col btn border-right">
+            <a  class="btn btn-dark w-100 text-white" href="tel:0770189673">
+              <span class="fas fa-phone-alt"></span><br>
+              <span class="text-em text-uppercase">Appeler</span><br>
 
-          </a>
+            </a>
 
+          </div>
+          <div class="col btn border-left">
+            <a class="btn btn-dark w-100 text-white" href="mailto:ludovic.dedieu13@gmail.com">
+
+              <span class="fas fa-paper-plane"></span><br>
+              <span class="text-em text-uppercase">Email</span><br>
+            </a>
+          </div>
         </div>
-        <div class="col btn border-left">
-          <a class="btn btn-dark w-100 text-white" href="mailto:ludovic.dedieu13@gmail.com">
-
-          <span class="fas fa-paper-plane"></span><br>
-          <span class="text-em text-uppercase">Email</span><br>
-        </a>
-        </div>
-
       </div>
-    </div>
 
     </header>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-2 text-center">
+          <span class="fas fa-info-circle"></span>
+        </div>
+        <div class="col">
+          <span>
+            <em>Actuellement en formation développeur Web/Mobile (16/01/20 au ??/09/20)</em><br>
+            <em>Durée de formation : 9 mois </em><br>
+            <strong> Diplôme en sortie: Bac+2(Développeur Web junior)</strong><br>
+            <strong>En recherche de stage du 30 Juin au 14 Août</strong>
+          </span>
+        </div>
+      </div>
+      <hr class="w-50">
+      <div class="row">
+        <div class="col-2 text-center">
+          <span class="fas fa-phone-alt"></span>
+        </div>
+        <div class="col">
+          <span>
+            <a href="tel:0630704376">07 70 18 93 73</a>
+            <br>
+            <em>Mobile</em>
+          </span>
+        </div>
+      </div>
+      <hr class="w-50">
+      <div class="row">
+        <div class="col-2 text-center">
+          <span class="fas fa-paper-plane"></span>
+        </div>
+        <div class="col">
+          <span>
+            <a href="mailto:ludovic.dedieu13@gmail.com">
+              ludovic.dedieu13@gmail.com
+            </a>
+            <br>
+            <em>E-mail</em>
+          </span>
+        </div>
+      </div>
+      <hr class="w-50">
+      <div class="row">
+        <div class="col-2 text-center">
+          <span class="fas fa-briefcase"></span>
+        </div>
+        <div class="col">
+          <span>
+            Formation de Développeur Web/Mobile<br>
+            <strong>GRETA-CFA Aix-Marseille</strong>
+          </span>
+        </div>
+      </div>
+      <hr class="w-50">
+      <div class="row">
+        <div class="col-2 text-center">
+          <span class="fas fa-map-marker-alt"></span>
+        </div>
+        <div class="col">
+          <span>
+            Aix-en-Provence
+          </span>
+        </div>
+      </div>
+      <hr class="w-50">
+      <div class="row">
+        <div class="col-2 text-center">
+          <span class="fas fa-globe"></span>
+        </div>
+        <div class="col">
+          <span>
+            <a href="#">Mon site web</a>
+            <br>
+            <em> Portfolio(en développement)</em>
+          </span>
+        </div>
+      </div>
+      <hr class="w-50">
+      <div class="row">
+        <div class="col-2 text-center">
+          <span class="fas fa-share-alt"></span>
+        </div>
+        <div class="col">
+          <div class="row">
+            <div class="col">
+              <span>
+                Réseaux sociaux
+              </span>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-2 text-center">
+              <a href="https://www.linkedin.com/in/ludovic-dedieu/">
+                <span class="fab fa-linkedin fa-2x"></span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr class="w-50">
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
